--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "allowJs": true,
 
     // "bun-types" is the important part
-    "types": ["bun-types"]
+    "types": [
+      "bun-types",
+      "./types.d.ts"
+    ]
   }
 }
