--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bun-types": "^0.2.0"
   },
   "scripts": {
-    "day": "bun run index.ts"
+    "day": "bun run index.ts",
+    "test": "bun wiptest"
   }
 }
