--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: bun install
       - run: bun wiptest
