--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "bun-types": "^0.2.0"
+    "@types/chai": "^4.3.4",
+    "bun-types": "^0.2.0",
+    "chai": "^4.3.7"
   },
   "scripts": {
     "day": "bun run index.ts",
