--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "bun-types": "^0.2.0",
-    "chai": "^4.3.7"
+    "bun-types": "^0.3.0"
   },
   "scripts": {
     "day": "bun run index.ts",
